--- a/templates/run_program.html
+++ b/templates/run_program.html
@@ -76,6 +76,14 @@
                 </form>
             </div>
         {% endif %}
+
+        {% if is_periodic_running %}
+            <form method="POST" action="/stop">
+                <button type="submit" class="w-full px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition mt-4">
+                    Stop Periodic
+                </button>
+            </form>
+        {% endif %}
     </div>
     <script>
         // Show/hide interval input
