--- a/templates/run_program.html
+++ b/templates/run_program.html
@@ -8,6 +8,9 @@
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 min-h-screen flex flex-col items-center justify-center">
     <div class="w-full max-w-md mx-auto bg-white dark:bg-gray-800 rounded-lg shadow-md p-8 mt-10">
+        <div class="flex justify-center mb-6">
+            <img src="/static/raspiot_logo_for_dark.png" alt="RaspIoT Logo" class="h-16">
+        </div>
         <h2 class="text-2xl font-semibold text-gray-700 dark:text-gray-200 mb-6">
             RaspIoT Data Sender
         </h2>
