--- a/templates/run_program.html
+++ b/templates/run_program.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 min-h-screen flex flex-col items-center justify-center">
-    <div class="w-full max-w-md mx-auto bg-white dark:bg-gray-800 rounded-lg shadow-md p-8 mt-10">
+    <div class="w-full max-w-md mx-auto bg-white dark:bg-gray-800 rounded-lg shadow-md p-8">
         <div class="flex justify-center mb-6">
             <img src="/static/raspiot_logo_for_dark.png" alt="RaspIoT Logo" class="h-16">
         </div>
