Add Hotspot Active Flag

--- a/templates/run_program.html
+++ b/templates/run_program.html
@@ -11,7 +11,7 @@
         <div class="flex justify-center mb-6">
             <img src="/static/raspiot_logo_for_dark.png" alt="RaspIoT Logo" class="h-16">
         </div>
-        <h2 class="text-2xl font-semibold text-gray-700 dark:text-gray-200 mb-6">
+        <h2 class="text-2xl font-semibold text-gray-700 dark:text-gray-200 mb-6 text-center">
             RaspIoT Data Sender
         </h2>
         {% with messages = get_flashed_messages(with_categories=true) %}
