Add OLED for Debugging

--- a/templates/wifi_setup.html
+++ b/templates/wifi_setup.html
@@ -176,7 +176,7 @@
                 <input type="text" name="ssid_manual" id="ssid-manual" maxlength="64" />
             </div>
             <label>Password</label>
-            <input type="password" name="password" required />
+            <input type="password" name="password"/>
             <button type="submit">Connect</button>
         </form>
         <div class="info">
